--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz game</title>
 </head>
+
 <body>
+    <h1>Quiz app</h1>
+    <h4>This is a quiz </h4>
     <script src="index.js"></script>
 </body>
 </html>
